Fixing z-index issue with menu icon on mobile.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -95,6 +95,7 @@ a
 	padding: 0.75rem;
 	position: fixed;
 	width: 1.5rem;
+	z-index: 9999;
 }
 	.menu-icon:hover
 	{
